changed search function to be a global function

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,3 +32,15 @@
     border:none;
     border-radius: 5px;
 }
+
+#forecast{
+    display: flex;
+}
+
+.smallCard{
+    background-color: darkslategray;
+    color: white;
+    width: 19%;
+    margin-top: 15px;
+    margin-right: auto;
+}
